# rl-sde-is

./: .gitignore  LICENSE.md  README.md  setup.cfg  setup.py
korali/: base_parser.py  config.py  environment.py  eval-vracer_doublewell.py  run-vracer_butane.py  run-vracer_doublewell.py  run-vracer_triplewell.py
scripts/: downsize_vracer_backups.sh
src/rl_sde_is/: agent_not_trained.py  agent_random.py  approximate_dp_value_iteration.py  approximate_methods.py  base_parser.py  config.py  ddpg.py  ddpg_continuing.py  ddpg_core.py  ddpg_episodic.py  ddpg_episodic_1d.py  ddpg_episodic_2d.py  ddpg_utils.py  dpg_1d.py  dpg_batch_1d.py  dpg_core.py  dpg_replay_1d.py  dpg_utils.py  dqn.py  dqn_old.py  dqn_replay.py  dynamic_programming.py  dynammic_programming.py  environments.py  environments_1d.py  environments_2d.py  environments_committor.py  environments_det.py  environments_temp.py  evaluate_agent.py  evaluate_agent_old.py  functions.py  gradient_mc_prediction.py  learning_mc.py  models.py  plot_experiments.py  plots.py  policies.py  random_agent.py  reinforce_continuous.py  (+61 more)
src/rl_sde_is/discrete/: discrete_utils.py  dqn_core.py  run_dqn_ol.py
src/rl_sde_is/dpg/: ddpg_core.py  dpg_core.py  dpg_utils.py  eval_ddpg_episodic_ol.py  eval_model_based_dpg_ol.py  eval_reinforce_det_butane.py  eval_reinforce_det_ol.py  eval_td3_episodic_ol.py  eval_td3_episodic_toy.py  model_based_dpg_core.py  naf_core.py  reinforce_deterministic_core.py  replay_buffers.py  replay_memories.py  run_ddpg_episodic_ol.py  run_dpg_optimal_ol.py  (+12 more)
tests/: conftest.py  test_environments.py
(+49 files in other folders)
