[metadata]
name = rl-sde-is
version = file: VERSION
author = Enric Ribera Borrell 
author_email = ribera.borrell@fu-berlin.de
description = Reinforcement learning algorithms for solving the importance sampling SOC problem.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riberaborrell/rl-sde-is
project_urls =
    Bug Tracker = https://github.com/riberaborrell/rl-sde-is/issues
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE

[options]
zip_safe = False
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
   notebook
   numpy
   matplotlib
   scipy
   torch

[options.extras_require]
test = pytest

[options.packages.find]
where = src
